# github-pr-slack-monitor

./: .gitignore  .project  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env
app/: setup.cfg  setup.py
app/src/: __init__.py  main.py
app/src/tests/: README.md  test_calculate_time_back.py  test_normalize_seconds.py  test_setup_vars.py  test_slack_payload.py
app/src/utils/: version.py
config/deploy/: README.md  app.py  ci.py  compose.yml  compose.yml.tpl  dev.json  dev.properties  preprod.json  preprod.properties  prod.json  prod.properties  setup.cfg  setup.py  test.json  test.properties
config/deploy/src/: ci.py  jsonreader.py  main.py
