[metadata]
name = github-pr-monitor
version = attr: src.__version__
description = PR Monitor for Github
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation =
    Release notes =
    Source =
    Tracker =

[options]
python_requires = >=3.6
include_package_data = true
zip_safe = false
setup_requires =
    setuptools
install_requires =
    PyGithub
    apscheduler

[options.extras_require]
dev =
    pytest
    PyHamcrest

[global]
quiet = 1

[sdist]
formats = zip,tar
